# rchan

./: Cargo.toml  README.md  build.rs
src/: cli.rs  main.rs  models.rs  routes.rs
src/www/: index.html  post.html  readme.html  style.css
