[package]
name = "rchan"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
edition = "2018"
repository = "https://github.com/Dawidkubis/rchan"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
serde = {version="1.0.105", features=["derive"]}
anyhow = "1.0.27"
rocket = "0.4.4"

[build-dependencies]
comrak = "0.7.0"
